@@ -4,6 +4,7 @@ HIGH
 - model: Faucet, Beaker, Dropper, Movable
 
 MEDIUM
+- limit dropperFluid.bottom to solution.top
 - constrain pH and volume so that student computations match displayed values, as in Java sim
 
 LOW
