@@ -21,6 +21,7 @@ define( function( require ) {
   var ResetAllButton = require( 'SCENERY_PHET/ResetAllButton' );
   var ScreenView = require( 'JOIST/ScreenView' );
   var SoluteComboBox = require( 'PH_SCALE/common/view/SoluteComboBox' );
+  var SolutionNode = require( 'PH_SCALE/common/view/SolutionNode' );
 
   /**
    * @param {SolutionsModel} model
@@ -38,6 +39,7 @@ define( function( require ) {
 
     // beaker
     var beakerNode = new BeakerNode( model.beaker, mvt );
+    var solutionNode = new SolutionNode( model.solution, model.beaker, mvt );
 
     // dropper
     var dropperNode = new DropperNode( model.dropper, mvt );
@@ -66,6 +68,7 @@ define( function( require ) {
     rootNode.addChild( drainFaucetNode );
     rootNode.addChild( dropperFluidNode );
     rootNode.addChild( dropperNode );
+    rootNode.addChild( solutionNode );
     rootNode.addChild( beakerNode );
     rootNode.addChild( resetAllButton );
     rootNode.addChild( soluteComboBox );
